JumpScript/tests/baselines/reference/undefinedTypeAssignment1.errors.txt
tests/cases/compiler/undefinedTypeAssignment1.jump(1,6): error TS2397: Declaration name conflicts with built-in global identifier 'undefined'.


==== tests/cases/compiler/undefinedTypeAssignment1.jump (1 errors) ====
    type undefined = string;
         ~~~~~~~~~
!!! error TS2397: Declaration name conflicts with built-in global identifier 'undefined'.
    function p(undefined = "wat") {
    	return undefined;
    }
    